--- a/windows.html.md.erb
+++ b/windows.html.md.erb
@@ -47,7 +47,9 @@ Also, note that Pre-Start, Post-Start, Drain, and Post-Deploy scripts (described
 ---
 ### <a id="stop-scripts"></a> Stop Scripts in Jobs
 
-Release job can have a stop script that will run when the job is restarted or stopped. This script allows the job to clean up and get into a state where it can be safely stopped. 
+Release job can have a stop script that will run when the job is restarted or stopped. This script allows the job to clean up and get into a state where it can be safely stopped.
+
+The stop script replaces the standard mechanism for shutting down a BOSH job. If you use a stop script, [winsw](https://github.com/kohsuke/winsw) will *not* stop your job automatically. Instead it is the responsibility of the stop script to clean up resources and kill any processes that are part of the job. Winsw will wait for both the stop script and the main job process to exit before reporting to Windows that the service has terminated. For more details on how winsw handles a stop script, see [winsw documentation](https://github.com/kohsuke/winsw/blob/master/doc/xmlConfigFile.md#stopargumentstopexecutable).
 
 To use a stop script, a change to the job's `monit` and `spec` file must be made. The actual script source is placed in the jobs template directory. eg: `jobs/job_name/templates`
 
@@ -56,7 +58,7 @@ Stdout and Stderr are currently not preserved. It is recommended to use the Wind
 
 ### Monit
 
-Monit changes can refer to separate scripts for both stop and start actions. 
+Monit changes can refer to separate scripts for both stop and start actions.
 For instance, to use separate scripts for start and stop:
 
 ```json
@@ -77,7 +79,7 @@ For instance, to use separate scripts for start and stop:
 
 ### Spec
 
-The `spec` file change is similar to linux. Here is an example: 
+The `spec` file change is similar to linux. Here is an example:
 
 ```
 ---
