--- a/bosh-lite.html.md.erb
+++ b/bosh-lite.html.md.erb
@@ -114,7 +114,7 @@ Run through quick steps below or follow [deploy workflow](basic-workflow.html) t
     $ route add           10.244.0.0/16    192.168.50.6 # Windows
     </pre>
 
-1. In case you need to SSH into the Director VM, see [Jumpbox user](jumpbox-user.md).
+1. In case you need to SSH into the Director VM, see [Jumpbox](jumpbox.html).
 
 1. In case VirtualBox VM shuts down or reboots
 
