--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -33,7 +33,7 @@ See [Recent Additions and Updates](recent.html).
 ## <a id="basic-deploy"></a> Deploy software with BOSH
 
 * [Deploy workflow](basic-workflow.html)
-    * [Update cloud config](setting-cloud-config.html)
+    * [Update cloud config](update-cloud-config.html)
     * [Build deployment manifest](deployment-basics.html)
     * [Upload stemcells](uploading-stemcells.html)
     * [Upload releases](uploading-releases.html)
