--- a/deployment-manifest.html.md.erb
+++ b/deployment-manifest.html.md.erb
@@ -141,14 +141,14 @@ resource_pools:
 - [See Azure CPI resource pool cloud properties](azure-cpi.html#resource-pools)
 - [See OpenStack CPI resource pool cloud properties](openstack-cpi.html#resource-pools)
 - [See Softlayer CPI resource pool cloud properties](softlayer-cpi.html#resource-pools)
-- [See Google Cloud Platform CPI resource pool cloud properties](google-cpi.html#resource-pools)
+- [See Google Cloud Platform CPI resource pool cloud properties](google-cpi.html#vm-types)
 - [See vSphere CPI resource pool cloud properties](vsphere-cpi.html#resource-pools)
 - [See vCloud CPI resource pool cloud properties](vcloud-cpi.html#resource-pools)
 
 ---
 ## <a id='disk-pools'></a>Disk Pools Block
 
-**disk_pools** [Array, required]: Specifies the [disk pools](./terminology.html#disk-pools) a deployment uses. A deployment manifest can describe multiple disk pools and uses unique names to identify and reference them.
+**disk_pools** [Array, required]: Specifies the [disk pools](./terminology.html#disk-pool) a deployment uses. A deployment manifest can describe multiple disk pools and uses unique names to identify and reference them.
 
 * **name** [String, required]: A unique name used to identify and reference the disk pool
 * **disk_size** [Integer, required]: Specifies the disk size. `disk_size` must be a positive integer. BOSH creates a [persistent disk](./persistent-disks.html) of that size in megabytes and attaches it to each job instance VM.
@@ -170,7 +170,7 @@ disk_pools:
 - [See Azure CPI disk pool cloud properties](azure-cpi.html#disk-pools)
 - [See OpenStack CPI disk pool cloud properties](openstack-cpi.html#disk-pools)
 - [See Softlayer CPI disk pool cloud properties](softlayer-cpi.html#disk-pools)
-- [See Google Cloud Platform CPI disk pool cloud properties](google-cpi.html#disk-pools)
+- [See Google Cloud Platform CPI disk pool cloud properties](google-cpi.html#disk-types)
 - [See vSphere CPI disk pool cloud properties](vsphere-cpi.html#disk-pools)
 - [See vCloud CPI disk pool cloud properties](vcloud-cpi.html#disk-pools)
 
