--- a/jumpbox.html.md.erb
+++ b/jumpbox.html.md.erb
@@ -8,7 +8,7 @@ It's recommended:
 - do not SSH to the Director
 - use `bosh ssh` to access VMs in your deployments and use jumpbox VM as your SSH gateway
 
-To obtain SSH access specifically to the Director VM when necessary you can opt into `jumpbox-user.yml` ops file when running [`bosh create-env` command(cli-v2.html#create-env). It will add a `jumpbox` user to the VM (by using `user_add` job from `cloudfoundry/os-conf-release`).
+To obtain SSH access specifically to the Director VM when necessary you can opt into `jumpbox-user.yml` ops file when running [`bosh create-env` command](cli-v2.html#create-env). It will add a `jumpbox` user to the VM (by using `user_add` job from `cloudfoundry/os-conf-release`).
 
 <pre class="terminal">
 $ bosh int creds.yml --path /jumpbox_ssh/private_key > jumpbox.key
