Fix CLI-v2 ssh anchor

--- a/cli-v2.html.md.erb
+++ b/cli-v2.html.md.erb
@@ -749,7 +749,7 @@ See [CPI config](cpi-config.html).
     </pre>
 
 ---
-### <a id="errand-mgmt"></a> SSH
+### <a id="ssh-mgmt"></a> SSH
 
 - <a id="ssh"></a> `bosh -e my-env -d my-dep ssh [destination] [-r] [-c=cmd] [--opts=opts] [--gw-* ...]`
 
