--- a/bosh-lite.html.md.erb
+++ b/bosh-lite.html.md.erb
@@ -76,6 +76,15 @@ Follow below steps to get it running on locally on VirtualBox:
     Succeeded
     </pre>
 
+1. Optionally, set up a local route for `bosh ssh` commands or accessing VMs directly
+
+    <pre class="terminal">
+    $ sudo route add -net 10.244.0.0/16    192.168.50.6 # Mac OS X
+    $ sudo route add -net 10.244.0.0/16 gw 192.168.50.6 # Linux
+    $ route add           10.244.0.0/16    192.168.50.6 # Windows
+    </pre>
+
+
 ---
 ## <a id="deploy"></a> Deploy example Zookeeper deployment
 
@@ -106,18 +115,9 @@ Run through quick steps below or follow [deploy workflow](basic-workflow.html) t
     $ bosh -e vbox -d zookeeper run-errand smoke-tests
     </pre>
 
-1. Optionally, set up a local route for `bosh ssh` command
 
-    <pre class="terminal">
-    $ sudo route add -net 10.244.0.0/16    192.168.50.6 # Mac OS X
-    $ sudo route add -net 10.244.0.0/16 gw 192.168.50.6 # Linux
-    $ route add           10.244.0.0/16    192.168.50.6 # Windows
-    </pre>
+## <a id="tips"></a> Tips
 
-1. In case you need to SSH into the Director VM, see [Jumpbox](jumpbox.html).
-
-1. In case VirtualBox VM shuts down or reboots
-
-    To bring back the Director on the VM you will have to re-run `create-env` command from above. (You will have to remove `current_manifest_sha` line from `state.json` to force a redeploy.) The containers will be lost after a VM restart, but you can restore your deployment with `bosh cck` command. Alternatively *Pause* the VM from the VirtualBox UI before shutting down VirtualBox host, or making your computer sleep.
-
-If you are looking for the original Vagrant based BOSH Lite, please refer to [cloudfoundry/bosh-lite's README](https://github.com/cloudfoundry/bosh-lite).
+* In case you need to SSH into the Director VM, see [Jumpbox](jumpbox.html).
+* In case VirtualBox VM shuts down or reboots, you will have to re-run `create-env` command from above. (You will have to remove `current_manifest_sha` line from `state.json` to force a redeploy.) The containers will be lost after a VM restart, but you can restore your deployment with `bosh cck` command. Alternatively *Pause* the VM from the VirtualBox UI before shutting down VirtualBox host, or making your computer sleep.
+* If you are looking for the original Vagrant-based BOSH Lite, please refer to [cloudfoundry/bosh-lite's README](https://github.com/cloudfoundry/bosh-lite).
