note when gcs blobstore is availbale

--- a/director-configure-blobstore.html.md.erb
+++ b/director-configure-blobstore.html.md.erb
@@ -76,6 +76,8 @@ The Director and the Agents can use an S3 compatible blobstore. Here is how to c
 ---
 ## <a id="gcs"></a> Google Cloud Storage (GCS)
 
+<p class="note">Note: Available in bosh release v263+ and Linux stemcells 3450+.</p>
+
 The Director and the Agents can use GCS as a blobstore. Here is how to configure it:
 
 1. [Create a GCS bucket](https://cloud.google.com/storage/docs/creating-buckets).
