Update typo around drain scripts :running:

--- a/cli-v2.html.md.erb
+++ b/cli-v2.html.md.erb
@@ -598,7 +598,7 @@ See [CPI config](cpi-config.html).
 
     Recreates VMs for specified instances. Follows typical instance lifecycle.
 
-    - `--skip-drain` flag skips runnig drain scripts
+    - `--skip-drain` flag skips running drain scripts
     - `--fix` flag replaces unresponsive VMs
     - `--canaries=` flag overrides manifest values for `canaries`
     - `--max-in-flight=` flag overrides manifest values for `max_in_flight`
@@ -617,7 +617,7 @@ See [CPI config](cpi-config.html).
 
     Restarts jobs (processes) on specified instances. Does not affect VM state.
 
-    - `--skip-drain` flag skips runnig drain scripts
+    - `--skip-drain` flag skips running drain scripts
     - `--canaries=` flag overrides manifest values for `canaries`
     - `--max-in-flight=` flag overrides manifest values for `max_in_flight`
 
@@ -633,7 +633,7 @@ See [CPI config](cpi-config.html).
     Stops jobs (processes) on specified instances. Does not affect VM state unless `--hard` flag is specified.
 
     - `--hard` flag forces VM deletion (keeping persistent disk)
-    - `--skip-drain` flag skips runnig drain scripts
+    - `--skip-drain` flag skips running drain scripts
     - `--canaries=` flag overrides manifest values for `canaries`
     - `--max-in-flight=` flag overrides manifest values for `max_in_flight`
 
