Fix invalid JSON in create_stemcell example

--- a/cpi-api-v1.html.md.erb
+++ b/cpi-api-v1.html.md.erb
@@ -45,7 +45,7 @@ See [Stemcell Building](build-stemcell.html) for more details.
 [
 	"/tmp/extracted-stemcell-348754vdsn87fr/image",
 	{
-		"name:" "bosh-openstack-esxi-ubuntu-trusty-go_agent",
+		"name": "bosh-openstack-esxi-ubuntu-trusty-go_agent",
 		"version": "2972",
 		"infrastructure": "openstack",
 		"hypervisor": "esxi",
