Another misplaced quote

--- a/cpi-api-v1.html.md.erb
+++ b/cpi-api-v1.html.md.erb
@@ -49,7 +49,7 @@ See [Stemcell Building](build-stemcell.html) for more details.
 		"version": "2972",
 		"infrastructure": "openstack",
 		"hypervisor": "esxi",
-		"disk:" 3072,
+		"disk": 3072,
 		"disk_format": "ovf",
 		"container_format": "bare",
 		"os_type": "linux",
