--- a/init-azure.html.md.erb
+++ b/init-azure.html.md.erb
@@ -12,7 +12,7 @@ If you do not have an Azure account, [create one](https://azure.microsoft.com/en
 
 Then follow this [guide](https://github.com/cloudfoundry-incubator/bosh-azure-cpi-release/blob/master/docs/get-started/create-service-principal.md) to create your Azure service principal.
 
-We strongly recommend you to use Azure template [bosh-setup](https://azure.microsoft.com/en-us/documentation/templates/bosh-setup/) to initialize the new environment on Microsoft Azure.
+We strongly recommend you to use Azure template [bosh-setup](https://github.com/Azure/azure-quickstart-templates/tree/master/bosh-setup) to initialize the new environment on Microsoft Azure.
 
 To prepare your Azure environment find out and/or create any missing resources in Azure. If you are not familiar with Azure take a look at [Creating Azure resources](azure-resources.html) page for more details on how to create and configure necessary resources:
 
