Add `set_disk_metadata` to CPI API methods
[#141967195](https://www.pivotaltracker.com/story/show/141967195)

Signed-off-by: Marco Voelz <marco.voelz@sap.com>

--- a/cpi-api-v1.html.md.erb
+++ b/cpi-api-v1.html.md.erb
@@ -500,6 +500,42 @@ No return value
 [Example detach_disk.go](https://github.com/cppforlife/bosh-warden-cpi-release/blob/master/src/github.com/cppforlife/bosh-warden-cpi/action/detach_disk.go)
 
 ---
+### <a id="set-disk-metadata"></a> `set_disk_metadata`
+
+Sets disk's metadata to make it easier for operators to categorize disks when looking at the IaaS management console. For example AWS CPI uses tags to store metadata for operators to see in the AWS Console.
+
+Disk metadata is written when the disk is attached to a VM. Metadata is not removed when disk is detached or VM is deleted.
+
+#### Arguments
+
+- **disk_cid** [String]: Cloud ID of the disk to modify; returned from `create_disk`.
+- **metadata** [Hash]: Collection of key-value pairs. CPI should not rely on presence of specific keys.
+
+##### Example
+
+```yaml
+[
+  "vol-3475945",
+  {
+    "director": "director-784430",
+    "deployment": "redis",
+    "instance_id": "ce7d2040-212e-4d5a-a62d-952a12c50741",
+    "job": "redis",
+    "instance_index": "1",
+    "instance_name": "redis/ce7d2040-212e-4d5a-a62d-952a12c50741",
+    "attached_at": "2017-08-10T12:03:32Z"
+  }
+]
+
+```
+
+#### Returned
+
+No return value
+
+[Example #set\_disk\_metadata](https://github.com/cloudfoundry-incubator/bosh-openstack-cpi-release/blob/0c8ee8951cab41d0ddc86591719d55d8a783ac98/src/bosh_openstack_cpi/lib/cloud/openstack/cloud.rb#L629)
+
+---
 ### <a id="get-disks"></a> `get_disks`
 
 Returns list of disks _currently_ attached to the VM.
