--- a/cli-env-deps.html.md.erb
+++ b/cli-env-deps.html.md.erb
@@ -4,7 +4,7 @@ title: CLI `create-env` Dependencies
 
 <p class="note">Note: Applies to CLI v2.</p>
 
-`bosh create-env` (and `bosh delete-env`) command requires some additional dependencies (similar to `bosh-init`).
+The `bosh create-env` (and `bosh delete-env`) command has dependencies (similar to `bosh-init`).
 
 1. Depending on your platform install following packages:
 
@@ -33,7 +33,7 @@ title: CLI `create-env` Dependencies
     $ brew install openssl
     </pre>
 
-1. Make sure any version of Ruby is installed:
+1. Make sure Ruby is installed (any version is adequate):
 
     <pre class="terminal">
     $ ruby -v
