--- a/cpi-api-v1.html.md.erb
+++ b/cpi-api-v1.html.md.erb
@@ -325,6 +325,7 @@ No return value
 
 ---
 ### <a id="calculate-vm-cloud-properties"></a> `calculate_vm_cloud_properties` (Experimental)
+<p class="note">Note: This method is not called by BOSH yet.</p>
 
 Returns a hash that can be used as VM `cloud_properties` when calling `create_vm`; it describes the IaaS instance type closest to the arguments passed.
 
@@ -343,10 +344,10 @@ If a parameter is set to a value greater than what is available (e.g. 1024 CPUs)
 
 #### Arguments
 
-- **desired_instance_size** [Hash]: Parameters of the desired size of the VM consisting of the following keys:
+- **desired\_instance\_size** [Hash]: Parameters of the desired size of the VM consisting of the following keys:
   - **cpu** [Integer]: Number of virtual cores desired
   - **ram** [Integer]: Amount of RAM, in MiB (i.e. `4096` for 4 GiB)
-  - **ephemeral_disk_size** [Integer]: Size of ephemeral disk, in MB
+  - **ephemeral\_disk\_size** [Integer]: Size of ephemeral disk, in MB
 
 ##### Example
 
