--- a/cli-env-deps.html.md.erb
+++ b/cli-env-deps.html.md.erb
@@ -11,6 +11,7 @@ The `bosh create-env` (and `bosh delete-env`) command has dependencies (similar 
     **Ubuntu Trusty**
 
     <pre class="terminal">
+    $ sudo apt-get update
     $ sudo apt-get install -y build-essential zlibc zlib1g-dev ruby ruby-dev openssl libxslt-dev libxml2-dev libssl-dev libreadline6 libreadline6-dev libyaml-dev libsqlite3-dev sqlite3
     </pre>
 
