--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -62,6 +62,8 @@ See [Recent Additions and Updates](recent.html).
 * [User management](director-users.html)
     * [UAA Integration](director-users-uaa.html)
     * [UAA Permissions](director-users-uaa-perms.html)
+* CredHub Integration
+    * [Variable Types](variable-types.html)
 * [Backup and restore](director-backup.html)
 * [General architecture](bosh-components.html)
 
