--- a/runtime-config.html.md.erb
+++ b/runtime-config.html.md.erb
@@ -20,7 +20,8 @@ $ bosh runtime-config
 Acting as user 'admin' on 'micro'
 
 releases:
-- {name: strongswan, version: 6.0.0}
+- name: strongswan
+  version: 6.0.0
 
 addons:
 - name: security
@@ -37,7 +38,8 @@ Once runtime config is updated all deployments will be considered outdated. `bos
 
 ```yaml
 releases:
-- {name: strongswan, version: 6.0.0}
+- name: strongswan
+  version: 6.0.0
 
 addons:
 - name: security
@@ -68,7 +70,8 @@ Example:
 
 ```yaml
 releases:
-- {name: strongswan, version: 6.0.0}
+- name: strongswan
+  version: 6.0.0
 ```
 
 ---
