Required minimum set of permissions for Google CPI
[#149971892](https://www.pivotaltracker.com/story/show/149971892)

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -120,6 +120,7 @@ See [Recent Additions and Updates](recent.html).
 * [vCloud](vcloud-cpi.html)
 * [SoftLayer](softlayer-cpi.html)
 * [Google Compute Engine](google-cpi.html)
+    * [Required service account permissions](google-required-permissions.html)
 * [RackHD](rackhd-cpi.html)
 * [Warden/Garden](warden-cpi.html)
 * [VirtualBox](virtualbox-cpi.html)
