--- a/hm-config.html.md.erb
+++ b/hm-config.html.md.erb
@@ -42,6 +42,13 @@ properties:
 ```
 
 ---
+## <a name="json"></a> JSON
+
+Enabled by default.
+
+Plugin that sends alerts and heartbeats as json to programs installed on the director over stdin. The plugin will start and manage a process for each executable matching the glob /var/vcap/jobs/*/bin/bosh-monitor/*.
+
+---
 ## <a name="tsdb"></a> OpenTSDB
 
 Plugin that forwards alerts and heartbeats to [OpenTSDB](http://opentsdb.net/).
