--- a/cli-v2.html.md.erb
+++ b/cli-v2.html.md.erb
@@ -253,7 +253,7 @@ See [Uploading Stemcells](uploading-stemcells.html).
 
 - <a id="finalize-release"></a> `bosh finalize-release release.tgz [--force] [--version=ver] [--dir=dir]`
 
-    Records contents of a release tarball as a final release with an optionally given version. Once `.final_builds` and `releases` directories are updates it's strongly recommend to commit your changes to version control.
+    Records contents of a release tarball as a final release with an optionally given version. Once `.final_builds` and `releases` directories are updated, it's strongly recommend to commit your changes to version control.
 
     Typically this command is used as a final step in the CI pipeline to save the final artifact once it passed appropriate tests.
 
